
* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

10-Dec-2011 Christophe Demko
 # [#26589] unexpected behaviour in RSS with feed email (Brian Teeman)
 $ [#27367] Capitalise quick icon (Brian Teeman)
 $ [#27310] sef or SEF  (Brian Teeman)
 # [#27324] Joomla! Administration Login box has very SMALL margin at the bottom. (Nikolai Plath)

09-Dec-2011 Mark Dexter
 - Remove some files missed in reverting [#27282]
 # [#27291] Update database connection field
 + [#27205] Add a true autoloader to the CMS

09-Dec-2011 Jean-Marie Simonet
 # [#27325] Wrong module language file names in mod_articles_popular.xml. Thanks Alex.
 $ [#27289] bad english in en-GB.mod_syndicate.ini. Thanks Brian
 $ [#27313] template component language. Thanks Brian
 $ [#27314] Login component language. Thanks Brian
 $ [#27315] utilize not en-GB. Thanks Brian
 $ [#27311] normally not normaly - spelling. Thanks Brian

08-Dec-2011 Mark Dexter
 - Reverting [#27282] Add ability to support other databases, starting with Microsoft SQL Server and Postgresql
 - Reverting [#27291] Update database connection field until database changes are restored.

08-Dec-2011 Jean-Marie Simonet
 # [#27342] *Type display in Plugin Manager "Select Type" filter dropdown broken
 # [#27291] Update database connection field. Thanks Elin
 # [#27340] * Bug in preinstall check
 # Wrong EOF
 # [#27200] modMenuHelper references non-existent parameter. Thanks Denise
 # [#27158] Fatal PHP Error on calling method JMenuSite::getDefault() in Administrator. Thanks Christophe
 # [#27341] Incorrect Article Order in Sample Data. Thanks Mark

07-Dec-2011 Jean-Marie Simonet
 $ [#27316] customize not en-GB. Thanks Brian.
 $ [#27309] centred spelling en-GB
 # [#27294] *Validation through W3C broken on multilanguage sites. Thanks Christophe
 $ [#27312] Logged in or Logged-in. Thanks Brian.

06-Dec-2011 Mark Dexter