@@ -78,7 +78,7 @@ INSTL_ADMIN_PASSWORD2_LABEL="Confirm Admin Password"
 INSTL_ADMIN_USER_LABEL="Admin Username"
 INSTL_SITE_NAME_TITLE="Site Name"
 INSTL_SITE_META_ADVANCED_SETTINGS="Advanced Settings - Optional"
-INSTL_SITE_NAME_DESC="Enter the name of your Joomla! site.<br />Optional: You can also enter Meta Description and Meta keywords for your site."
+INSTL_SITE_NAME_DESC="Enter the name of your Joomla! site.<br />Optional:<br /> You can also enter Meta Description and Meta keywords for your site.<br /> You may also decide if the site frontend may be immediately available or not after the installation is completed."
 INSTL_SITE_METADESC_LABEL="Meta Description"
 INSTL_SITE_METADESC_TITLE_LABEL="Enter a description of the overall Web site that is to be used by search engines. Generally, a maximum of 20 words is optimal."
 INSTL_SITE_METAKEYS_LABEL="Meta Keywords"
@@ -91,6 +91,8 @@ INSTL_SITE_LOAD_SAMPLE_DESC2="<strong>1. Sample data:</strong> Before leaving th
 INSTL_SITE_LOAD_SAMPLE_DESC3="<strong>1a. Default sample data</strong> can be inserted. To do this, make sure the Default English (GB) Sample Data is displayed in the dropdown and click the Install Sample Data button."
 INSTL_SITE_LOAD_SAMPLE_DESC4="<strong>1b. Custom sample data</strong> can be inserted. To do this, choose an available sample data in the dropdown and click the Install Sample Data button."
 INSTL_SITE_LOAD_SAMPLE_DESC8="<strong>2. Clean Installation</strong>: If you wish to perform a clean installation, enter the site name, admin email and choose a password. Then proceed to the final step by clicking <em>Next</em>."
+INSTL_SITE_OFFLINE_LABEL="Site Offline"
+INSTL_SITE_OFFLINE_TITLE_LABEL="Set the site frontend offline when installation is completed. The site can be set online later on through the Global Configuration."
 INSTL_SITE_SAMPLE_LABEL="Sample Data set"
 INSTL_SITE_INSTALL_SAMPLE_LABEL="Install Sample Data"
 INSTL_SITE_INSTALL_SAMPLE_DESC="Installing sample data is strongly recommended for beginners. This will install sample content that is included in the Joomla! installation package."
