@@ -7,7 +7,6 @@
 			required="true"
 		/>
 
-
 		<field name="admin_email" type="text" id="admin_email" class="inputbox"
 			label="INSTL_ADMIN_EMAIL_LABEL"
 			validate="email"
@@ -55,6 +54,15 @@
 				label="INSTL_SITE_METAKEYS_LABEL"
 				rows="3"
 			/>
+			
+			<field name="site_offline" type="radio" id="site_offline" default="0"
+			label="INSTL_SITE_OFFLINE_LABEL"
+			filter="integer"
+			>
+				<option value="0">JNO</option>
+				<option value="1">JYES</option>
+			</field>
+
 		</fieldset>
 	</fieldset>
 </form>
